@@ -1,6 +1,7 @@
 package com.hyjw_back.config;
 
 
+import com.hyjw_back.entity.Users;
 import com.hyjw_back.service.JwtService;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -10,11 +11,13 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
@@ -26,31 +29,22 @@ public class JwtFilter extends OncePerRequestFilter {
             throws ServletException, IOException {
 
         String uri = request.getRequestURI();
-        System.out.println("JwtFilter 요청 URI: " + uri); //
-
-
-        if (uri.contains("/users/signup") ||
-                uri.contains("/users/login") ||
-                uri.contains("/users/checkEmail") ||
-                uri.contains("/users/checkNickname")) {
-            System.out.println("JwtFilter 예외 처리 통과: " + uri); //
-            filterChain.doFilter(request, response);
-            return;
-        }
-
-
+        System.out.println("JwtFilter 요청 URI: " + uri);
 
         String jwtToken = request.getHeader(HttpHeaders.AUTHORIZATION);
         if (jwtToken != null) {
             String email = jwtService.parseToken(request);
             if (email != null) {
-                Authentication authentication = new UsernamePasswordAuthenticationToken(
-                        email,
-                        null,
-                        java.util.Collections.emptyList()
-                );
-                SecurityContextHolder.getContext().setAuthentication(authentication);
-            }
+                Users user = jwtService.loadUserByEmail(email);
+                UsernamePasswordAuthenticationToken authentication =
+                        new UsernamePasswordAuthenticationToken(
+                                user,
+                                null,
+                                List.of(new SimpleGrantedAuthority("ROLE_" + user.getUserRole().name()))
+                        );
+//                authentication.setDetails(user); // 선택 사항
+//                authentication.setAuthenticated(true);
+                SecurityContextHolder.getContext().setAuthentication(authentication);    }
         }
 
         filterChain.doFilter(request, response);
